--- a/Part 2.ipynb
+++ b/Part 2.ipynb
@@ -348,8 +348,9 @@
    },
    "outputs": [],
    "source": [
-    "#TODO: Write your code for 2.2.2 here\n",
+    "# Write your code for 2.2.2 here\n",
     "# You are allowed to add more arguments to the functions and create more functions if needed.\n",
+    "\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
