--- a/Part 3.ipynb
+++ b/Part 3.ipynb
@@ -475,14 +475,8 @@
    "id": "804a5f34",
    "metadata": {},
    "source": [
-    "### 3 - LLM Without Retrieval"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f6ba268",
-   "metadata": {},
-   "source": [
+    "### 3 - LLM Without Retrieval\n",
+    "\n",
     "Try to find a few badly preforming examples with similarity to the real answer:"
    ]
   },
@@ -504,19 +498,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# selective searching of bad results:\n",
     "results = {}\n",
     "\n",
     "for entry in [train_data[i] for i in range(20)]:\n",
+    "    # get the question and the answer:\n",
     "    q = entry['question']\n",
     "    answer = entry['answers']['text'][0]\n",
     "    response = co.chat(model='command-r-plus', message=q).text\n",
     "\n",
+    "    # compare the similarity between the embeddings of the answer and the response:\n",
     "    answer_emb = model.encode(answer)\n",
     "    response_emb = model.encode(response)\n",
     "    similarity = cosine_similarity(answer_emb, response_emb)\n",
     "\n",
-    "    results[(q, answer, response)] = similarity\n",
-    "    # print(similarity)"
+    "    results[(q, answer, response)] = similarity"
    ]
   },
   {
@@ -645,6 +641,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3594a85",
+   "metadata": {},
+   "source": [
+    "Look at the examples the regular LLM preformed poorly on, and see if RAG can improve the results:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "id": "a8d51308",
@@ -698,7 +702,25 @@
    "id": "83477319",
    "metadata": {},
    "source": [
-    "### 5 - Insights"
+    "### 5 - Insights\n",
+    "\n",
+    "to improve our understanding of the model, we will perform a rough analysis on a tiny sample of the dataset, to compare the running time and a measure for performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f82e246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# search time (including the retrieval step for RAG):\n",
+    "time_llm = []\n",
+    "time_rag = []\n",
+    "\n",
+    "# cosine similarity between the correct answer and the response, a rough measure of quality:\n",
+    "similarity_llm = []\n",
+    "similarity_rag = []"
    ]
   },
   {
@@ -716,26 +738,24 @@
     }
    ],
    "source": [
-    "time_llm = []\n",
-    "time_rag = []\n",
-    "\n",
-    "similarity_llm = []\n",
-    "similarity_rag = []\n",
-    "\n",
     "### Evaluate the first 50 entries in the training data anecdotally:\n",
+    "\n",
     "for entry in tqdm([train_data[i] for i in range(50)]):\n",
     "    q = entry['question']\n",
     "    answer = entry['answers']['text'][0]\n",
     "\n",
+    "    # Response time from LLM:\n",
     "    start = time.time()\n",
     "    llm_response = co.chat(model='command-r-plus', message=q).text\n",
     "    time_llm.append(time.time() - start)\n",
     "\n",
+    "    # Response time from RAG:\n",
     "    start = time.time()\n",
     "    augmented_prompt, source_knowledge = augment_prompt(q, model=model, index=index)\n",
     "    rag_response = co.chat(model='command-r-plus', message=augmented_prompt).text\n",
     "    time_rag.append(time.time() - start)\n",
     "\n",
+    "    # Similarities between the embeddings of the answer and the responses:\n",
     "    answer_emb = model.encode(answer)\n",
     "    llm_response_emb = model.encode(llm_response)\n",
     "    rag_response_emb = model.encode(rag_response)\n",
@@ -772,6 +792,7 @@
     }
    ],
    "source": [
+    "### Plot the results:\n",
     "fig, ax = plt.subplots(1, 2, figsize=(12, 6))\n",
     "\n",
     "ax[0].title.set_text(\"Mean Cosine Similarity to Answer for Simple LLM vs. RAG\")\n",
@@ -780,26 +801,15 @@
     "\n",
     "ax[1].title.set_text(\"Run-Time for Simple LLM vs. RAG\")\n",
     "ax[1].bar([\"Simple LLM\", \"RAG\"], [np.mean(time_llm), np.mean(time_rag)], color=['C0', 'C1'], alpha=0.7)\n",
-    "ax[1].set_ylabel(\"Mean Run-Time (s)\")\n"
+    "ax[1].set_ylabel(\"Mean Run-Time (s)\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dabe6df5",
+   "cell_type": "markdown",
+   "id": "d36e8498",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# fig, ax = plt.subplots(1, 2, figsize=(12, 6))\n",
-    "\n",
-    "# ax[0].title.set_text(\"Cosine Similarity to Answer for Simple LLM vs. RAG\")\n",
-    "# ax[0].hist([similarity_llm, similarity_rag], bins=10, label=[\"Simple LLM\", \"RAG\"], alpha=0.7)\n",
-    "# ax[0].set_ylabel(\"Number of questions\")\n",
-    "\n",
-    "# ax[1].title.set_text(\"Run-Time for Simple LLM vs. RAG\")\n",
-    "# ax[1].hist([time_llm, time_rag], bins=5, label=[\"Simple LLM\", \"RAG\"], alpha=0.7)\n",
-    "# ax[1].set_ylabel(\"Number of questions\")\n",
-    "# plt.show()"
+    "We can see the RAG model is both faster and with a higher cosine similarity than the LLM model. We elaborate on these findings in the report."
    ]
   }
  ],
